# Space-Radiation-Tolerant

./: CITATION.md  CMakeLists.txt  CONTRIBUTING.md  COPYRIGHT_HEADER.txt  CTestTestfile.cmake  ELECTRON_DEFECT_MODEL.md  FAQ.md  IEEE754_TMR_Implementation_Report.md  IEEE_QRS_2025_Graph_Summary.md  IEEE_QRS_2025_Submission_Summary.md  LEO_RADIATION_SIMULATION.md  MULTI_PARTICLE_REFACTORING.md  NOTICE  QUANTUM_FIELD_IMPLEMENTATION.md  README.md  Space_Labs_Radiation_Test_Report.md  Space_Radiation_Framework_Architecture.md  Space_Radiation_Framework_Technical_Architecture.md  best_model.pth  build_minimal_bindings.sh  build_python_bindings.sh  comprehensive_model_test  custom_leo_mission  custom_saa_mission  ecc_comparison.md  enhanced_monte_carlo.py  enhanced_tmr_test  finalFrameworkDrawing.md  framework-analysis.md  framework_verification_test  galois_field_test  galois_field_test.cpp  generate_ieee_qrs_graphs.py  generate_rad_ml_graphs.py  generate_validation_plot.py  gf_minimal_test  gf_minimal_test.cpp  ieee754_tmr_test  ieee_qrs_2025_validation_framework.py  leo_simulation_results.csv  (+61 more)
FAQ/: Adaptive_Voting_ASCII_Diagram.md  Advanced_System_Integration_Data_Flow_Analysis.md  Application_Layer_Technical_Overview.md  FAQ.md  HOW_IT_WORKS.md  PARTICLE_TYPES.md  Resource_Allocation_Algorithm_Deep_Dive.md
Testing/Temporary/: CTestCostData.txt  LastTest.log.tmp22dab
build_python/examples/: tmr_example.py
build_python/rad_ml/: __init__.py
examples/: CMakeLists.txt  CTestTestfile.cmake  advanced_radiation_comparison.py  architecture_test  auto_arch_search_example  auto_arch_search_example.cpp  custom_leo_mission.cpp  custom_saa_mission.cpp  extreme_conditions_results.csv  ml_inference_example.cpp  multi_particle_simulation_example  multi_particle_simulation_example.cpp  neural_network_example.py  pytorch_radiation_hardening.py  quantum_enhanced_radiation_test  quantum_enhanced_radiation_test.cpp  quantum_field_example.cpp  quantum_integration_example.cpp  quantum_simulation_example  quantum_simulation_example.cpp  radiation_aware_training_example  residual_network_test  spacecraft_telemetry.cpp  tensorflow_radiation_hardening.py  tmr_example.py  vae_comprehensive_test  vae_comprehensive_test.cpp  vae_example  vae_example.cpp  vae_production_example  vae_production_example.cpp  vae_space_mission_test  vae_space_mission_test.cpp  vae_validation_test  vae_validation_test.cpp
examples/enhanced_features_test/: approx_tmr_test.cpp  enhanced_features_test.cpp  extreme_stress_test.cpp  simple_test.cpp
examples/mission_simulator/: CTestTestfile.cmake  mission_simulator  mission_simulator.cpp
examples/orbit_simulation/: README.md  rad_tolerant_ml_demo.cpp
examples/simple_nn/: CTestTestfile.cmake  main.cpp  simple_nn
ieee_qrs_2025_validation/: IEEE_QRS_2025_Validation_Report.md  VALIDATION_STATUS.txt
ieee_qrs_2025_validation/results/: benchmark_enhanced_tmr_test.txt  benchmark_ieee754_tmr_test.txt  benchmark_systematic_fault_test.txt  comparative_analysis.txt  mission_jupiter_flyby.txt  monte_carlo_validation.txt  neural_network_validation.txt  quantum_field_validation.txt  radiation_0.7_VAE_ONLY.txt  vae_mathematical_validation.txt
python/: README.md  rad_ml_core.cpp  rad_ml_minimal.cpp  setup.py
quantum_analysis_results/: summary_stats.csv
rad_ml/: __init__.py
rad_ml_lib/: README.md  __init__.py  setup.py
results/: mc_test_standard_HIGH_GEO.csv  mc_test_standard_MINIMAL_LEO.csv  mc_test_standard_MODERATE_LEO.csv  mc_test_standard_NONE_LEO.csv  mc_test_wide_HIGH_GEO.csv  mc_test_wide_MODERATE_LEO.csv  mc_test_wide_SPACE_OPTIMIZED_MARS.csv  monte_carlo_comparison.csv  protection_methods_comparison.csv  protection_recommendations.md
src/: enhanced_vs_baseline_test.cpp  enhancement_comparison.cpp  industry_standard_test.cpp  nasa_esa_standard_runner.cpp  space_mission_validation_test.cpp
test/: comprehensive_model_test.cpp  framework_validation_test.cpp  mission_critical_validation.cpp  model_accuracy_test.cpp  rad_train_fixed.cpp  run_api_tests.sh  simple_model_accuracy_test.cpp
test/api_test/: CMakeLists.txt  custom_defense_api_test.cpp
tests/: CMakeLists.txt  fixed_map_test.cpp  fixed_vector_test.cpp  material_physics_integration_test.cpp  quantum_integration_test.cpp  quantum_stability_test.cpp  radiation_hardened_vector_test.cpp  test_quantum_integration.cpp  test_quantum_integration_fixed.cpp
tools/: protection_visualizer.cpp  visualize_quantum_results.py  visualize_results.py
(+173 files in other folders)
